Minor visual fix.

--- a/public/jstest.html
+++ b/public/jstest.html
@@ -11,7 +11,7 @@
 </script>
 </head>
 <body>
-<div style="width: 400px; float: left">
+<div style="padding-right:5px; float: left">
 <textarea id="inputbox" cols="50" rows="50">
 </textarea>
 </div>
